--- a/.github/workflows/ARMv8.yml
+++ b/.github/workflows/ARMv8.yml
@@ -195,6 +195,11 @@ jobs:
 
 
 
+    - name: copy update files
+      run: |
+        cd /opt/openwrt_packit
+        sudo cp files/openwrt-update-amlogic output/openwrt-update-amlogic
+        
     - name: Package Armvirt as OpenWrt
       uses: unifreq/openwrt_packit@master
       env:
@@ -203,6 +208,7 @@ jobs:
           KERNEL_AUTO_LATEST:  true
           KERNEL_VERSION_NAME: 5.4.168_5.10.88_5.15.11
           WHOAMI: Yuan
+          artifacts: "/opt/openwrt_packit/output/*"
           
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
