--- a/.github/workflows/ARMv8.yml
+++ b/.github/workflows/ARMv8.yml
@@ -224,3 +224,10 @@ jobs:
            Default username: root
            Default password: password
            
+    - name: Remove old Releases
+      uses: dev-drprasad/delete-older-releases@v0.1.0
+      with:
+        keep_latest: 3
+        delete_tags: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
