--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -209,27 +209,28 @@ jobs:
           SFE_FLOW: 0
           artifacts: ${{ env.FIRMWARE }}/*
           
-    - name: copy update files
-      run: |
-        cd /opt/openwrt_packit
-        sudo cp files/scripts_deprecated/update-amlogic-openwrt.sh output/update-amlogic-openwrt.sh
-          
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
          tag: Selfuse_OpenWrt_${{ env.PACKAGED_OUTPUTDATE }}
          artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
          allowUpdates: true
+         removeArtifacts: true
          token: ${{ secrets.GITHUB_TOKEN }}
          body: |
            This is OpenWrt firmware for Armvirt 64
            * Firmware information
            自用固件，插件根据个人需要.
            
+    - name: copy update files
+      run: |
+         cd /opt/openwrt_packit
+         sudo cp files/scripts_deprecated/update-amlogic-openwrt.sh output/update-amlogic-openwrt.sh
+        
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.1.0
       with:
-        keep_latest: 3
-        delete_tags: true
+         keep_latest: 3
+         delete_tags: true
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
