--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -216,12 +216,14 @@ jobs:
           
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
+      if: env.PACKAGED_STATUS == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-         tag: Selfuse_OpenWrt_${{ env.PACKAGED_OUTPUTDATE }}
-         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+         name: R${{ env.DATE }} for ${{ env.FILE_NAME }}
          allowUpdates: true
          removeArtifacts: true
+         tag: Selfuse_OpenWrt_${{ env.PACKAGED_OUTPUTDATE }}
          token: ${{ secrets.GITHUB_TOKEN }}
+         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
          body: |
            This is OpenWrt firmware for Armvirt 64
            * Firmware information
