--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -209,6 +209,12 @@ jobs:
         SFE_FLOW: 0
         artifacts: ${{ env.FIRMWARE }}/*
         
+    - name: Upload artifact to Actions
+      uses: kittaakos/upload-artifact-as-is@master
+      if: env.PACKAGED_STATUS == 'success' && env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      with:
+        path: ${{ env.PACKAGED_OUTPUTPATH }}/
+        
     - name: copy update files
       run: |
         cd /opt/openwrt_packit
