--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -212,7 +212,7 @@ jobs:
     - name: copy update files
       run: |
         cd /opt/openwrt_packit
-        sudo cp files/scripts_deprecated/update-amlogic-openwrt.sh output/${{ env.PACKAGED_OUTPUTPATH }}/*/update-amlogic-openwrt.sh
+        sudo cp files/scripts_deprecated/update-amlogic-openwrt.sh output/update-amlogic-openwrt.sh/${{ env.FIRMWARE }}/*
           
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
