--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -213,11 +213,11 @@ jobs:
       run: |
         cd /opt/openwrt_packit
         sudo cp files/scripts_deprecated/update-amlogic-openwrt.sh output/update-amlogic-openwrt.sh
+           artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
           
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-         name: R${{ env.DATE }} for ${{ env.FILE_NAME }}
          allowUpdates: true
          removeArtifacts: true
          tag: Selfuse_OpenWrt_${{ env.PACKAGED_OUTPUTDATE }}
