--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -227,7 +227,8 @@ jobs:
          body: |
            This is OpenWrt firmware for Armvirt 64
            * Firmware information
-           * 自用固件，插件根据个人需要.
+           * Selfuse是自用固件，插件根据个人需要删减.
+           * ARMv8是精简固件.
            * 默认IP: 192.168.1.1
            * 默认密码: password
         
